<resources>
    <string name="app_name">Tronferno</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_expert">Expert-Mode</string>
    <string name="action_enter_motor_code">Enter Motor-Code</string>
    <string name="action_edit_shutter_name">Edit Shutter-Name</string>
    <string name="action_hide_log">Hide Log-View</string>
    <string name="action_hide_timer">Hide Timer-View</string>
    <string name="action_send_rtc">Send Time To Receiver</string>

    <string name="sun_auto">Sun</string>
    <string name="random">Rand</string>
    <string name="astro">Astro</string>
    <string name="daily_up">Up</string>
    <string name="weekly">Weekly</string>
    <string name="daily_down">Down</string>
    <string name="g">G</string>
    <string name="e">E</string>
    <string name="stop">Stop</string>
    <string name="a">A</string>
    <string name="up">Up</string>
    <string name="sun_pos">Sun-Pos</string>
    <string name="down">Down</string>
    <string name="timer">Timer</string>
    <string name="cuas">Main Controller Auto Set</string>
    <string name="set_function">Set Function</string>
    <string name="set_end_pos">Set End Position</string>


    <string name="pref_group1_members">Members of Group 1</string>
    <string name="pref_group2_members">Members of Group 2</string>
    <string name="pref_group3_members">Members of Group 3</string>
    <string name="pref_group4_members">Members of Group 4</string>
    <string name="pref_group5_members">Members of Group 5</string>
    <string name="pref_group6_members">Members of Group 6</string>
    <string name="pref_group7_members">Members of Group 7</string>

    <string-array name="pref_members_titles">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="pref_members_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>


    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_on_mcu">MCU Remote Settings</string>


    <string-array name="pref_mcu_cli_verbosity_list_titles">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="pref_mcu_cli_verbosity_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <!-- Example settings for Data & Sync -->
    <string name="pref_header_members">Groups and Members</string>


    <!-- Example settings for Notifications -->
    <string name="pref_general">General</string>

    <!-- -->

    <string name="cuas_success">Success. Data has been received and stored.</string>
    <string name="cuas_timeout">Time-Out. Please try again</string>
    <string name="cuas_info">Please press and hold the Stop-Button on your Fernotron Central Unit for a few seconds</string>
    <string name="setf_info">You now have 60 seconds to pair a receiver to a transmitter. To add/remove a plain transmitter press STOP on it. To assign it to a Group/Member send timer: Select the wanted Group/Member in the app and press Send(-Timer)</string>

    <string name="edname_title">Edit name of member %1$d group %2$d:</string>


    <string name="pref_mcu_longitude">Longitude</string>
    <string name="pref_mcu_latitude">Latitude</string>
    <string name="pref_mcu_serial_baud">Serial Port Baud-Rate</string>
    <string name="pref_mcu_timezone">POSIX TimeZone (TZ)</string>
    <string name="pref_mcu_wlan_ssid">WLAN SSID</string>
    <string name="pref_mcu_wlan_password">WLAN Password</string>
    <string name="pref_mcu_central_unit_id">Central Unit ID</string>
    <string name="pref_mcu_cli_verbosity">CLI Verbosity Level</string>

    <string name="pref_gen_hostname">MCU-Hostname or -IP4-Address</string>

    <!--
  <string name="xxx">XXX</string>
  <string name="xx3">XXX</string>
  <string name="xx4">XXX</string>
  <string name="xx5">XXX</string>
  <string name="xx6">XXX</string>
 -->

</resources>
